gccida/g1/add_byte_size_attribute
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_byte_size_attribute/src/dwarf2out.c:9763:12: error: use of undeclared identifier 'elements'
tree_node *elements; // rdi 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_byte_size_attribute/src/dwarf2out.c:9781:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9320, "add_byte_size_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_byte_size_attribute/src/dwarf2out.c:9790:1: error: use of undeclared identifier 'elements'
elements = result->vector.elements; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_byte_size_attribute/src/dwarf2out.c:9792:6: error: use of undeclared identifier 'elements'
if ( elements ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_byte_size_attribute/src/dwarf2out.c:9794:21: error: use of undeclared identifier 'elements'
if ( host_integerp( elements, 1) ) 
                    ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_byte_size_attribute/src/obj/dwarf2out.o] Error 1
